Cleaned up tags and style

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -300,17 +300,17 @@ li.w-p-s-item
   text-align center
 
 .feature-testing
-  background-color #FD2
+  background-color var(--color-4)
   color var(--bg)
   padding 2px
-  font-size 15px
+  font-size 13px
   font-family BattalionMono
 
 .feature-planned
-  background-color #DD5634
+  background-color var(--color-5)
   color var(--bg)
   padding 2px
-  font-size 15px
+  font-size 13px
   font-family BattalionMono  
 
 /*
