Added initial photography and tools pages

--- a/views/wiki/tools.pug
+++ b/views/wiki/tools.pug
@@ -5,3 +5,21 @@ block content
     h1 Tools
     .under-title
       span Various things that I use to get other things done
+
+    hr
+
+    h2 Software
+    ul
+      li Terminal Emulator - iTerm 2
+      li Terminal Editor - Emacs
+      li GUI Editor - Sublime Text
+      li Vector Art - Dotgrid
+      li GUI Git Client - Sublime Merge
+      li Writing Environment - Left
+      li Web Browser - Safari
+
+    h2 Hardware
+    ul
+      li Main Desktop - Mac Mini (Late 2014)
+      li Monitor - Dell U2414H
+      li Soldering Iron - MIN TS-100
