--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -215,6 +215,8 @@ li.no-style
   grid-row-start 1
   grid-row-end 1
   justify-self center
+  li
+    margin-left 0
 
 .wiki-index-grid ul
   list-style-type none
@@ -222,6 +224,7 @@ li.no-style
 
 .wiki-latest-project
   border-bottom 2px solid #EEE
+  margin-left 0
 
 .wiki-header
   img
