--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -13,7 +13,7 @@ block content
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
       li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
       li <span class='icon-tablet'></span> Superintelligence - Nick Bostrum
-      li <span class='icon-headphones'></span> Awaken Online: Dominion - Travis Bagwell
+      li <span class='icon-headphones'></span> Use of Weapons - Iain M. Banks
     <hr>
     h2 To Read
     h3 Non-Fiction
@@ -37,12 +37,13 @@ block content
       li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
     h2 Read in 2019
-    h3 Goal >> 17/30
+    h3 Goal >> 18/30
     h4 Non-Fiction
     ul
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
     h4 Fiction - Sci-Fi
     ul
+      li <span class='icon-headphones'></span> Awaken Online: Dominion - Travis Bagwell
       li <span class='icon-headphones'></span> The Player of Games - Iain M. Banks
       li <span class='icon-headphones'></span> Consider Phlebas - Iain M. Banks
       li <span class='icon-headphones'></span> Rama II - Arthur C. Clarke
