Update humes and library

--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -14,6 +14,7 @@ block content
       li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
       li <span class='icon-tablet'></span> Superintelligence - Nick Bostrum
       li <span class='icon-headphones'></span> Use of Weapons - Iain M. Banks
+      li <span class='icon-tablet'></span> Slabscape: Reset - S. Spencer Baker
     <hr>
     h2 To Read
     h3 Non-Fiction
