Added how I read and listen to library

--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -8,6 +8,8 @@ block content
     .under-title
       span To Future Me: Read more Non-Fiction
     <hr>
+    h3 How I read
+    p My reading apparatus is as follows: Kindle Paperwhite running KOReader, Audible for iOS, my hands.
     h2 Currently Reading
     ul
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
