--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -9,7 +9,7 @@ block content
       span To Future Me: Read more Non-Fiction
     <hr>
     h3 How I read
-    p My reading apparatus is as follows: Kindle Paperwhite running KOReader, Audible for iOS, my hands.
+    p My reading apparatus is as follows: Kindle Paperwhite, Audible for iOS, my hands and ears.
     h2 Currently Reading
     ul
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
@@ -17,6 +17,7 @@ block content
       li <span class='icon-tablet'></span> Superintelligence - Nick Bostrum
       li <span class='icon-headphones'></span> Use of Weapons - Iain M. Banks
       li <span class='icon-tablet'></span> Slabscape: Reset - S. Spencer Baker
+      li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 3 - Reki Kawahara
     <hr>
     h2 To Read
     h3 Non-Fiction
@@ -34,18 +35,19 @@ block content
       li <span class='icon-book'></span> Rotherweird - Andrew Caldecott
     h3 Graphical
     ul
-      li <span class='icon-tablet'></span> SAGA - Brian K Vaughan, Fiona Staples
       li <span class='icon-tablet'></span> Giant Days - John Allison, Lissa Treiman
       li <span class='icon-tablet'></span> Paper Girls - Brian K. Vaughan, Cliff Chiang
       li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
     h2 Read in 2019
-    h3 Goal >> 18/30
+    h3 Goal >> 21/30
     h4 Non-Fiction
     ul
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
     h4 Fiction - Sci-Fi
     ul
+      li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 2 - Reki Kawahara
+      li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 1 - Reki Kawahara
       li <span class='icon-headphones'></span> Awaken Online: Dominion - Travis Bagwell
       li <span class='icon-headphones'></span> The Player of Games - Iain M. Banks
       li <span class='icon-headphones'></span> Consider Phlebas - Iain M. Banks
@@ -64,6 +66,7 @@ block content
       li <span class='icon-headphones'></span> How to Stop Time - Matt Haig
     h4 Graphical
     ul
+      li <span class='icon-tablet'></span> SAGA: Vol. 1 - Brian K Vaughan, Fiona Staples
       li <span class='icon-tablet'></span> Soul Eater - Atsushi Ōkubo
       li <span class='icon-book'></span> ApocalyptiGirl: An Aria for the End Times - Andrew MacLean
       li <span class='icon-book'></span> Homunculus - Joe Sparrow
