--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -46,6 +46,7 @@ block content
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
     h4 Fiction - Sci-Fi
     ul
+      li <span class='icon-headphones'></span> To Be Taught, If Fortunate - Becky Chambers
       li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 2 - Reki Kawahara
       li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 1 - Reki Kawahara
       li <span class='icon-headphones'></span> Awaken Online: Dominion - Travis Bagwell
