--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -15,7 +15,6 @@ block content
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
       li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
       li <span class='icon-tablet'></span> Superintelligence - Nick Bostrum
-      li <span class='icon-headphones'></span> Use of Weapons - Iain M. Banks
       li <span class='icon-tablet'></span> Slabscape: Reset - S. Spencer Baker
       li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 3 - Reki Kawahara
     <hr>
@@ -40,12 +39,14 @@ block content
       li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
     h2 Read in 2019
-    h3 Goal >> 21/30
+    h3 Goal >> 24/30
     h4 Non-Fiction
     ul
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
     h4 Fiction - Sci-Fi
     ul
+      li <span class='icon-headphones'></span> The State of the Art - Iain M. Banks
+      li <span class='icon-headphones'></span> Use of Weapons - Iain M. Banks
       li <span class='icon-headphones'></span> To Be Taught, If Fortunate - Becky Chambers
       li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 2 - Reki Kawahara
       li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 1 - Reki Kawahara
