--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -16,7 +16,6 @@ block content
       li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
       li <span class='icon-tablet'></span> Superintelligence - Nick Bostrum
       li <span class='icon-tablet'></span> Slabscape: Reset - S. Spencer Baker
-      li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 3 - Reki Kawahara
     <hr>
     h2 To Read
     h3 Non-Fiction
@@ -39,12 +38,16 @@ block content
       li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
     h2 Read in 2019
-    h3 Goal >> 24/30
+    h3 Goal >> 30/30
     h4 Non-Fiction
     ul
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
     h4 Fiction - Sci-Fi
     ul
+      li <span class='icon-headphones'></span> Expeditionary Force: Paradise - Craig Alanson
+      li <span class='icon-headphones'></span> Expeditionary Force: SpecOps - Craig Alanson
+      li <span class='icon-headphones'></span> Expeditionary Force: Columbus Day - Craig Alanson
+      li <span class='icon-tablet'></span> Sword Art Online: Progressive Vol. 3 - Reki Kawahara
       li <span class='icon-headphones'></span> The State of the Art - Iain M. Banks
       li <span class='icon-headphones'></span> Use of Weapons - Iain M. Banks
       li <span class='icon-headphones'></span> To Be Taught, If Fortunate - Becky Chambers
@@ -57,6 +60,7 @@ block content
       li <span class='icon-headphones'></span> The Vexed Generation - Scott Meyer
       li <span class='icon-headphones'></span> Outland - Dennis E. Taylor
       li <span class='icon-headphones'></span> Nine Fox Gambit - Yoon Ha Lee
+      li <span class='icon-headphones'></span> Footvote - Peter F. Hamilton
       li <span class='icon-headphones'></span> Rendezvous with Rama - Arthur C. Clarke
       li <span class='icon-tablet'></span> Citidel 32: A Tale of the Aggrigate - Tom Merrit
     h4 Fiction - Fantasy
@@ -68,6 +72,7 @@ block content
       li <span class='icon-headphones'></span> How to Stop Time - Matt Haig
     h4 Graphical
     ul
+      li <span class='icon-book'></span> Teen Titans: Raven - Kami Garcia, Gabriel Picolo
       li <span class='icon-tablet'></span> SAGA: Vol. 1 - Brian K Vaughan, Fiona Staples
       li <span class='icon-tablet'></span> Soul Eater - Atsushi Ōkubo
       li <span class='icon-book'></span> ApocalyptiGirl: An Aria for the End Times - Andrew MacLean
