Added review of goals for 2019 and a set of new goals for 2020

--- a/views/wiki/goals.pug
+++ b/views/wiki/goals.pug
@@ -8,8 +8,34 @@ block content
     .under-title
       span Optimism is the best-ism
     <hr>
-    h2 2019
+    h2 2020
+    //h3(id='the-list-2020') 2020 List
     h3 For the Year
+    ul
+      li Finish ten non-fiction books
+      li Complete two hardware projects
+      li Create a static site generator that pulls from a flat file database
+    h3 Monthly
+    ul
+      li Write a blog post about a topic
+    h3 Weekly
+    ul
+      li Ride a bike over 10KM
+      li Write an summery of events in my journal
+    <hr>
+    h2(id='2019') 2019
+    a(href='#the-list-2019') <u>2019 list</u>
+    h3 Review
+    p I failed a few of these goals. I'll get the negatives out of the way first.
+    h4 The Bad
+    p I haven't completed a single project this year. Mainly because I had to move house suddenly partway through the year which messed up my rhythm for the rest of it. This is also why I failed to work on a project most weeks for the weekly goal. In retrospect completing eight projects I didn't have outlines for at the start of the year was untenable. I'll reduce that for next year and work my way up.
+    p Writing in my journal was a daily thing that started in Sept 2018 and I kept it up for over one hundred days. After that streak I felt burnt out and since then I have written...nine entries. Not even weekly, most of them are months apart and have half remembered information in them. Next year I would like to  go back to writing daily or at least weekly.
+    h4 The Good
+    p I have reduced my meat intake significantly this year, until this year nine out of ten meals I ate contained meat, now it's more like one in ten. My diet has improved a lot because I'm thinking about what I'm eating now.
+    p I 'read' 30 books this year. Most of them were audio books and science fiction which I will mix up with more non-fiction in 2020.
+    p I've hit my exercise goal of thirty minutes on average two times a week this year which I'm proud of. Next year I'd like to do more cycling.
+    h3(id='the-list-2019') 2019 List
+    h3 For the year
     ul
       li Finish thirty books
       li Reduce the amount of times I eat meat in a week to three
