--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -38,12 +38,13 @@ block content
       li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
     h2 Read in 2019
-    h3 Goal >> 30/30
+    h3 Goal >> 31/30
     h4 Non-Fiction
     ul
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
     h4 Fiction - Sci-Fi
     ul
+      li <span class='icon-headphones'></span> Jonathan Strange &amp; mr. Norrell - Susanna Clarke
       li <span class='icon-headphones'></span> Expeditionary Force: Paradise - Craig Alanson
       li <span class='icon-headphones'></span> Expeditionary Force: SpecOps - Craig Alanson
       li <span class='icon-headphones'></span> Expeditionary Force: Columbus Day - Craig Alanson
