--- a/views/wiki/retejo.pug
+++ b/views/wiki/retejo.pug
@@ -25,5 +25,5 @@ block content
       p This site uses and several external projects, below is a list of things being used along with their creators. Go check them out!
 
       ul
-        li Battalion Mono - <a class='outbound' href='https://craze.co.uk/battalion.html'>Rutherford Craze</a>
+        li Battalion Mono - <a class='outbound' href='https://craze.co.uk/battalion'>Rutherford Craze</a>
         li SpaceGrotesk - <a class='outbound' href='https://fonts.floriankarsten.com/space-grotesk'>Florian Karsten</a>
