--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -37,6 +37,14 @@ block content
       li <span class='icon-tablet'></span> Paper Girls - Brian K. Vaughan, Cliff Chiang
       li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
+    h2 Read in 2020
+    h3 Non-Fiction Goal >> 0/10
+    h4 Fiction - Sci-Fi
+    ul
+      li <span class='icon-headphones'></span> Not Alone: Second Contact - Craig A. Falconer
+      li <span class='icon-headphones'></span> The Fold - Peter Clines
+      li <span class='icon-headphones'></span> Not Alone - Craig A. Falconer
+    hr
     h2 Read in 2019
     h3 Goal >> 31/30
     h4 Non-Fiction
